rename sln file

--- a/Delivery Driver - 2D/.vscode/settings.json
+++ b/Delivery Driver - 2D/.vscode/settings.json
@@ -53,5 +53,5 @@
     "Temp/": true
   },
   "dotnet.preferCSharpExtension": true,
-  "dotnet.defaultSolution": "Delivery Driver.sln"
+  "dotnet.defaultSolution": "Delivery Driver - 2D.sln"
 }
