--- a/Snow Boarder - 2D/.vscode/settings.json
+++ b/Snow Boarder - 2D/.vscode/settings.json
@@ -53,5 +53,5 @@
     "Temp/": true
   },
   "dotnet.preferCSharpExtension": true,
-  "dotnet.defaultSolution": "Snow Boarder.sln"
+  "dotnet.defaultSolution": "Snow Boarder - 2D.sln"
 }
