--- a/Delivery Driver - 2D/.editorconfig
+++ b/Delivery Driver - 2D/.editorconfig
@@ -1,4 +1,4 @@
-# Rules in this file were initially inferred by Visual Studio IntelliCode from the D:\Develop\UniversityDays\ codebase based on best match to current usage at 2021/2/2
+# Rules in this file were initially inferred by Visual Studio IntelliCode
 # You can modify the rules from these initially generated values to suit your own policies
 # You can learn more about editorconfig here: https://docs.microsoft.com/en-us/visualstudio/ide/editorconfig-code-style-settings-reference
 [*.cs]
